deploy: e3a8864c824d4c8970fb44cb7d2c9bd449c16d34

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ Gil Morim
 <span aria-hidden=true class=navbar-burger__line></span>
 <span aria-hidden=true class=navbar-burger__line></span></a><nav class=nav><ul class=nav__list id=navMenu><li class=nav__list-item><a class=nav__link--active href=/ title>Home</a></li><li class=nav__list-item><a href=/posts/ title>Posts</a></li></ul><ul class="nav__list nav__list--end"><li class=nav__list-item><div class=themeswitch><a title="Switch Theme"><i class="fas fa-adjust fa-fw" aria-hidden=true></i></a></div></li></ul></nav></div></header><div class="post
 animated fadeInDown"><div class=post__content></div></div><div class="post
+animated fadeInDown"><div class=post__content><h3><a href=/posts/cpp-proj-template/>CPP PROJ TEMPLATE</a></h3><p></p></div><div class=post__footer><em class="fas fa-calendar-day"></em>
+<span class=post__footer-date>5/1/2024
+</span><span><a class=category href=/categories/cpp/>cpp</a></span>
+<span><a class=tag href=/tags/cpp/>cpp</a><a class=tag href=/tags/cmake/>cmake</a><a class=tag href=/tags/project/>project</a><a class=tag href=/tags/template/>template</a></span></div></div><div class="post
 animated fadeInDown"><div class=post__content><h3><a href=/posts/my-first-post/>HELLO, WORLD</a></h3><p>This is my first blog post, hopefully I can share more of myself to people.</p></div><div class=post__footer><em class="fas fa-calendar-day"></em>
 <span class=post__footer-date>22/5/2022
 </span><span><a class=tag href=/tags/introduction/>introduction</a></span></div></div><div class=pagination></div></main></div><footer class="footer footer__base"><ul class=footer__list><li class=footer__item>&copy;
